# temporal-metabolic

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  PRESENTATION_DEMO.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.specstory/history/: 2025-08-25_01-12Z-what-does-this-repository-do.md  2025-08-26_03-56Z-review-repository-documentation-and-history.md
aws-deploy/: deployment-instructions.md  stop-ecs-tasks.sh
aws-deploy/docker/: Dockerfile  worker.py  worker_auto_shutdown.py  worker_simple.py
aws-deploy/frontend/: index.html
aws-deploy/infrastructure/: task-definition-optimized.json
aws-deploy/lambda/: submit_job.py
docs/: cli.md  index.md  quickstart.md
examples/: basic_usage.py
temporal/: README.md  __init__.py  annotate.py  demo.py  filter.py  schema.py
temporal/sources/: ec_to_category.yaml  oxygen_pathway_ages.yaml
temporal/sources/mappings/: bigg_aliases.yaml
tests/: test_annotate.py  test_schema.py
